Bug 252295 - "fit to window" button while using any tool does not permit panning
Summary: "fit to window" button while using any tool does not permit panning
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Canvas (other bugs)
Version First Reported In: 1.4.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-25 00:37 UTC by DrSlony
Modified: 2017-08-08 08:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments
"fit to window" working correctly before (138.96 KB, image/jpeg)
2010-09-25 00:37 UTC, DrSlony
Details
"fit to window" working correctly after (150.53 KB, image/jpeg)
2010-09-25 00:39 UTC, DrSlony
Details
"fit to window" working incorrectly before (145.13 KB, image/jpeg)
2010-09-25 00:39 UTC, DrSlony
Details
"fit to window" working incorrectly after (148.81 KB, image/jpeg)
2010-09-25 00:39 UTC, DrSlony
Details

Note You need to log in before you can comment on or make changes to this bug.
Description DrSlony 2010-09-25 00:37:16 UTC
Created attachment 51970 [details]
"fit to window" working correctly before

Version:           1.4.0 (using KDE 4.5.1) 
OS:                Linux

Using the "fit to window" button while using any tool (e.g. auto-correction, noise reduction, curve editor, etc) does indeed zoom to 100%, but the scrollbars are not updated, which means there basically are no scrollbars, and trying to pan the image with the middle mouse button does not work either.

While not using any tool, the button works as expected: if you click it, the image zooms to 100%, the scrollbars are updated accordingly, and you can pan using the middle mouse button.

Reproducible: Always

Steps to Reproduce:
1- Open image
2- Click on any tool so you get an extra tab on the far right
3- Try using the "fit to window" button on the bottom, next to "zoom to 100%" and "zoom out".

Actual Results:  
Image zooms to 100% but is frozen there - no scrollbars, no panning.

Expected Results:  
It should allow panning and the scrollbars should reflect that now large areas of the image are not visible because its larger than the viewable area.
Comment 1 DrSlony 2010-09-25 00:39:03 UTC
Created attachment 51971 [details]
"fit to window" working correctly after
Comment 2 DrSlony 2010-09-25 00:39:31 UTC
Created attachment 51972 [details]
"fit to window" working incorrectly before
Comment 3 DrSlony 2010-09-25 00:39:49 UTC
Created attachment 51973 [details]
"fit to window" working incorrectly after
Comment 4 Andi Clemens 2010-09-25 09:58:41 UTC
SVN commit 1179359 by aclemens:

Set the zoomWidth and zoomHeight accordingly to the current zoom factor

BUG: 252295

 M  +2 -1      NEWS  
 M  +3 -2      libs/widgets/common/previewwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1179359
Comment 5 Andi Clemens 2010-09-25 10:05:22 UTC
Still the button doesn't act the same for AlbumUI and ImageEditor:
In AlbumUI it is a normal button, in ImageEditor it is a toggle button.

Is this the intended usage?
Comment 6 caulier.gilles 2010-09-25 10:07:32 UTC
Andi,

It's must be the same, as it's the same component. Doesn't it ?

Gilles