Set the zoomWidth and zoomHeight accordingly to the current zoom factor

BUG: 252295

svn path=/trunk/extragear/graphics/digikam/; revision=1179359